--- a/gestor_empleados/src/config.properties
+++ b/gestor_empleados/src/config.properties
@@ -2,3 +2,5 @@
 db.url=jdbc:mysql://localhost:3306/escuela
 db.username=usrEmployees
 db.password=p455W0rd
+
+error.config=Error al cargar config.properties
