--- a/gestor_empleados/.vscode/settings.json
+++ b/gestor_empleados/.vscode/settings.json
@@ -1,7 +1,10 @@
 {
-    "java.project.sourcePaths": ["src"],
-    "java.project.outputPath": "bin",
+    "java.project.sourcePaths": [
+        "src"
+    ],
     "java.project.referencedLibraries": [
         "lib/**/*.jar"
-    ]
+    ],
+    "java.project.outputPath": "bin",
+    "java.autobuild.enabled": true
 }
